@@ -30,6 +30,8 @@
 
   <properties>
     <javaModuleName>io.netty.codec.http2</javaModuleName>
+    <!-- Needed for SSL tests as these use the SelfSignedCertificate -->
+    <argLine.java9.extras>--add-exports java.base/sun.security.x509=ALL-UNNAMED</argLine.java9.extras>
   </properties>
 
   <dependencies>
